@@ -1,3 +1,13 @@
+2004-01-23  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: missing \0 on short msg replies (closes: broken SIZE command)
+	* bugfix: wrong locking query method used (visual)
+	* bugfix: wrong length showed in log for empty files
+	* bugfix: files not locked during upload
+	* bugfix: files opened in wrong memory space for upload (visual)
+	* bugfix: wzd_cache_gets no working for oneliners (closes: site msg
+	show not working for one-line messages).
+
 2004-01-21  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* visual: fix build for release version
